--- a/Flix/Base.lproj/LaunchScreen.storyboard
+++ b/Flix/Base.lproj/LaunchScreen.storyboard
@@ -15,14 +15,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="yWj-co-Cln">
-                                <rect key="frame" x="138" y="383.5" width="138" height="139"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="TU9-VL-cHJ">
+                                <rect key="frame" x="138" y="379" width="138" height="139"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="yWj-co-Cln" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="339.5" id="qd7-SG-oWv"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
