--- a/Flix/Base.lproj/LaunchScreen.storyboard
+++ b/Flix/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="9cS-vT-SxZ">
-                                <rect key="frame" x="118" y="337" width="138" height="139"/>
+                                <rect key="frame" x="118.66666666666669" y="336.66666666666669" width="138" height="139"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
